--- a/2-render-function/2.3-render-comp.html
+++ b/2-render-function/2.3-render-comp.html
@@ -2,22 +2,33 @@
 
 <div id="app">
   <example :ok="ok"></example>
+  <button @click="ok = !ok">button</button>
 </div>
 
 <script>
-const Foo = {
-  // Implement this!
-}
+  const Foo = {
+    render(h) {
+      return h('div', 'foo')
+    }
+  }
 
-const Bar = {
-  // Implement this!
-}
+  const Bar = {
+    render(h) {
+      return h('div', 'bar')
+    }
+  }
 
-Vue.component('example', {
-  // Implement this!
-})
+  Vue.component('example', {
+    props: ['ok'],
+    render(h) {
+      return this.ok ? Foo.render(h) : Bar.render(h)
+    }
+  })
 
-new Vue({
-  el: '#app'
-})
+  new Vue({
+    el: '#app',
+    data: {
+      ok: true
+    }
+  })
 </script>
