--- a/4-state-management/4.2-shared-object.html
+++ b/4-state-management/4.2-shared-object.html
@@ -8,16 +8,30 @@
 </div>
 
 <script>
-// create a counter component (that doesn't take any props)
-// all instances of it should share the same count state
-// and a button that increments all counters at the same time
+  // create a counter component (that doesn't take any props)
+  // all instances of it should share the same count state
+  // and a button that increments all counters at the same time
 
-const Counter = {
-  // Implement this!
-}
+  const Counter = {
+    data() {
+      return state;
+    },
+    template: "<div>{{count}}</div>"
+  }
 
-new Vue({
-  el: '#app',
-  // Implement this!
-})
+  const state = {
+    count: 0
+  }
+
+  const app = new Vue({
+    el: '#app',
+    methods: {
+      inc() {
+        state.count = state.count + 1;
+      }
+    },
+    components: {
+      counter: Counter
+    }
+  })
 </script>
